@@ -9,3 +9,4 @@
 [2025-03-27 09:46:02]	No se encontró una version válida	Nuevas vistas incluidas modales
 [2025-03-27 10:16:02]	No se encontró una version válida	Mejora en pantalla de desbloqueo
 [2025-03-27 10:49:05]	No se encontró una version válida	Ventas modales genericas
+[2025-03-27 11:07:21]	No se encontró una version válida	Mejoras en un modal
